<resources>
    <string name="app_name">Northnet Statistics</string>
    <string name="newOrder">Νέα Παραγγελία</string>
    <string name="loadOrder">Εμφάνιση Παραγγελίας</string>
    <string name="loadInvoices">Εμφάνιση Παραστατικών</string>
    <string name="Merchandising">Merchandising</string>
    <string name="branch">Υποκατάστημα</string>
    <string name="deal">Συμφωνία</string>
    <string name="expire_soon">Κοντολήξιμα</string>
    <string name="mobileStreet">Mobile Street</string>
    <string name="newItem">Προσθήκη Νέου Αντικειμένου</string>
    <string name="settings">Ρυθμίσεις</string>
    <string name="items">Είδη</string>
    <string name="ok">O.K.</string>
    <string name="check">Έλεγχος</string>
    <string name="next">Επόμενο</string>
    <string name="checkOut">Προεπισκόπηση Παραγγελίας</string>
    <string name="billPreview">Προεπισκόπηση Τιμολογίου</string>
    <string name="createCustomer">Δημιουργία Νέου Πελάτη</string>
    <string name="offlinestats">Στατιστικά Offline</string>
    <string name="searchCustomer">Αναζήτηση Πελάτη</string>
    <string name="searchSupplier">Αναζήτηση Προμηθευτή</string>
    <string name="trader">Συναλλασσόμενος</string>
    <string name="offer">Προσφορά</string>
    <string name="order">Παραγγελία</string>
    <string name="cusinfo">Πληροφορίες Πελάτη</string>
    <string name="MBUrl">http://192.168.10.1:1010/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logIn">Είσοδος</string>
    <string name="userlogin">Είσοδος Χρήστη</string>
    <string name="customerCodeName">Κωδικός, Όνομα</string>
    <string name="customerTin">ΑΦΜ</string>
    <string name="customerAddressCityPCode">Διεύθυνση, Πόλη, Τ.Κ.</string>
    <string name="customerPhones">Τηλέφωνο, Τηλέφωνο 2, Κινητό</string>
    <string name="invoiceType">Τύπος Παραστατικού</string>
    <string name="srch">Αναζήτηση: </string>
    <string name="search">Αναζήτηση</string>
    <string name="massQuantity_">Μαζική ποσότητα:</string>
    <string name="massDiscount_">Μαζική Έκπτωση:</string>
    <string name="discountPercentage_">Ποσοστό Έκπτωσης:</string>
    <string name="discountValue_">Αξία Έκπτωσης:</string>
    <string name="total_s">Σύνολο: %1$s€</string>
    <string name="total2_sbef">Καθαρή Αξία προ έκπτωσης: %1$s€</string>
    <string name="total_sbef">Σύνολο προ έκπτωσης: %1$s€</string>
    <string name="total_sdis">Συνολική Έκπτωση: %1$s€</string>
    <string name="code">Κωδικός</string>
    <string name="name">Όνομα</string>
    <string name="tin">ΑΦΜ</string>
    <string name="address">Διεύθυνση</string>
    <string name="city">Πόλη</string>
    <string name="postalCode">Τ.Κ.</string>
    <string name="telephoneNumber">Τηλέφωνο</string>
    <string name="telephoneNumber2">Τηλέφωνο 2</string>
    <string name="mobileNumber">Κινητό</string>
    <string name="phones">Τηλέφωνα</string>
    <string name="email">E-mail</string>
    <string name="electrPayCode">Κωδικός ΔΕΗ</string>
    <string name="addressDescription">Περιγραφή Υποκαταστήματος</string>
    <string name="addressCode">Κωδικός Υποκαταστήματος</string>
    <string name="profession">Επάγγελμα</string>
    <string name="taxOffice">ΔΟΥ</string>
    <string name="noCustomerName">"Δεν έχετε εισάγει όνομα στον πελάτη."</string>
    <string name="noCustomerCity">"Παρακαλώ επιλέξτε μια πόλη από τη λίστα ή αφήστε το πεδίο κενό."</string>
    <string name="noCustomerProfession">"Παρακαλώ επιλέξτε ένα επάγγελμα από τη λίστα ή αφήστε το πεδίο κενό."</string>
    <string name="noCustomerTaxOffice">"Παρακαλώ επιλέξτε μια ΔΟΥ από τη λίστα ή αφήστε το πεδίο κενό."</string>
    <string name="create">Δημιουργία</string>
    <string name="cancel">Ακύρωση</string>
    <string name="selectedCustomer">Επιλεγμένος Πελάτης</string>
    <string name="selectedSupplier">Επιλεγμένος Προμηθευτής</string>
    <string name="customerlist">Λίστα Πελατών</string>
    <string name="image">Εικόνα</string>
    <string name="description">Περιγραφή</string>
    <string name="price">Τιμή</string>
    <string name="discountPrice">Τιμή με Έκπτωση</string>
    <string name="quantity">Ποσότητα</string>
    <string name="quantityA">Ποσότητα Α</string>
    <string name="quantityB">Ποσότητα Β</string>
    <string name="discount">Έκπτωση</string>
    <string name="discountA">Έκπτωση Είδους</string>
    <string name="value">Αξία</string>
    <string name="payable">Πληρωτέο</string>
    <string name="document">Έγγραφο</string>
    <string name="codeDescAltCode">Κωδικός, Περιγραφή, Εναλλακτικός κωδικός</string>
    <string name="open">Άνοιγμα</string>
    <string name="close">Κλείσιμο</string>
    <string name="company">Εταιρία</string>
    <string name="company_">"Εταιρία: "</string>
    <string name="item">Είδος</string>
    <string name="save">Αποθήκευση</string>
    <string name="print">Εκτύπωση</string>
    <string name="cancel_print">Εκτύπωση Ακυρωμένου</string>
    <string name="additionalItemInformation">Επιπρόσθετες Πληροφορίες Είδους</string>
    <string name="commentInvoice">Σχόλιο Τιμολόγησης:</string>
    <string name="exit">Έξοδος</string>
    <string name="taxlevel">Καθεστώς ΦΠΑ</string>
    <string name="paymentTerm">Τρόπος Πληρωμής</string>
    <string name="shippingMethod">Τρόπος Αποστολής</string>
    <string name="transportPurpose">Σκοπός Διακίνησης</string>
    <string name="branchnumber">Αριθμός Εγκατάστασης</string>
    <string name="searchItems">Αναζήτηση Ειδών</string>
    <string name="customer">Πελάτης</string>
    <string name="total">Σύνολο</string>
    <string name="total_">"Σύνολο: "</string>
    <string name="date">Ημερομηνία</string>
    <string name="delete">Διαγραφή</string>
    <string name="invoices">Παραστατικά</string>
    <string name="sync">Συγχρονισμός</string>
    <string name="connection">Σύνδεση</string>
    <string name="xVan">Τιμολόγηση επί αυτοκινήτου</string>
    <string name="xVan_sort">Τιμ. επί αυτοκινήτου</string>
    <string name="start">Έναρξη</string>
    <string name="send">Αποστολή</string>
    <string name="customers">Πελάτες</string>
    <string name="users">Χρήστες</string>
    <string name="images">Εικόνες</string>
    <string name="places"><u>Αποθ.Χώρος</u></string>
    <string name="amountrest"><u>Υπόλοιπο</u></string>
    <string name="buttonbalance">Εμφάνιση Υπολοίπων</string>
    <string name="complete">Ολοκλήρωση</string>
    <string name="onlineReports">Online Εκτυπώσεις</string>
    <string name="customerReport">Καρτέλα Πελάτη</string>
    <string name="ipAddress">Διεύθυνση IP</string>
    <string name="zoomIn">Μεγέθυνση</string>
    <string name="from_">"Από: "</string>
    <string name="to_">"Εώς: "</string>
    <string name="code_">"Κωδικός: "</string>
    <string name="name_">"Όνομα: "</string>
    <string name="tin_">"ΑΦΜ: "</string>
    <string name="street_">"Διεύθυνση: "</string>
    <string name="city_">"Πόλη: "</string>
    <string name="postalCode_">"Τ.Κ.: "</string>
    <string name="phone1_">"Τηλέφωνο: "</string>
    <string name="phone2_">"Τηλέφωνο2: "</string>
    <string name="mobile_">"Κινητό: "</string>
    <string name="email_">"E-mail: "</string>
    <string name="credit_">"Πίστωση: "</string>
    <string name="debit_">"Χρέωση: "</string>
    <string name="balance_">"Υπόλοιπο: "</string>
    <string name="execute">Εκτέλεση</string>
    <string name="collections">Εισπράξεις</string>
    <string name="cash_">"Μετρητά: "</string>
    <string name="card_">"Κάρτα: "</string>
    <string name="securityType">"Τυπος Αξιογράφου"</string>
    <string name="bank">Τράπεζα</string>
    <string name="expiration">Λήξη</string>
    <string name="number">Αριθμός</string>
    <string name="submit">Καταχώρηση</string>
    <string name="username">Όνομα Χρήστη</string>
    <string name="password">Κωδικός</string>
    <string name="user_">"Χρήστης: "</string>
    <string name="version_">"Έκδοση: "</string>
    <string name="changeCustomerDetails">Αλλαγή Στοιχείων Πελάτη</string>
    <string name="additionalCustomerDetails">Επιπρόσθετα Στοιχεία Πελάτη</string>
    <string name="addCheck">Προσθήκη Αξιόγραφου</string>
    <string name="comments1">Σχόλια Γραμμής</string>
    <string name="comments2">Επιπλέον Σχόλια</string>
    <string name="generalNotes">Γενικά Σχόλια</string>
    <string name="memoColorCompleted">":έχει ολοκληρωθεί"</string>
    <string name="memoIsSent">":έχει αποσταλλεί"</string>
    <string name="cashTotal_">"Σύνολο Μετρητών: %1$s"</string>
    <string name="desiredDeliveryDate">Επιθ. Ημ/νία Παράδοσης</string>
    <string name="noDeliveryDate">"Δεν έχετε συμπληρώσει ημερομηνία παράδοσης."</string>
    <string name="securitiesTotal_">"Σύνολο Αξιόγραφων: %1$s"</string>
    <string name="loadCollections">Εμφάνιση Εισπράξεων</string>
    <string name="inventory">Απογραφή</string>
    <string name="inventories">Απογραφές</string>
    <string name="loadInventory">Εμφάνιση Απογραφής</string>
    <string name="alternativeCode">Εναλλακτικός Κωδικός</string>
    <string name="itemSelect">"Επιλογή είδους"</string>
    <string name="description_">"Περιγραφή: "</string>
    <string name="quantity_">"Ποσότητα: "</string>
    <string name="barcode">Barcode</string>
    <string name="barcode_">"Barcode: "</string>
    <string name="setBarcode">"Ανάθεση Barcode"</string>
    <string name="notAllFields">"Δεν έχετε συμπληρώσει όλα τα απαραίτητα πεδία."</string>
    <string name="noItemFoundMatching">"Δεν βρέθηκαν είδη που να τεριάζουν στα κριτήρια αναζήτησης."</string>
    <string name="noItemFoundInComInvoice_s">"Δεν βρέθηκαν είδη στο παραστατικό του: %1$s."</string>
    <string name="inventoryDescription">Εντολή Απογραφής</string>
    <string name="warehouse">Αποθήκευτικός Χώρος</string>
    <string name="site">Υποκατάστημα</string>
    <string name="counter">Καταμετρητής</string>
    <string name="counterNotes">Σχόλια Καταμετρητή</string>
    <string name="countNumber">Αριθμός Καταμέτρησης</string>
    <string name="yes">Ναι</string>
    <string name="no">Όχι</string>
    <string name="saveInventoryQuestion">"Θέλετε να καταχωρήσετε την απογραφή;"</string>
    <string name="_date">"%1$s/%2$s/%3$s"</string>
    <string name="inventoryNotCompleted">"Η απογρφή δεν έχει ολοκληρωθεί.\nΘες να την αποθηκεύσεις;"</string>
    <string name="update">"Ενημέρωση"</string>
    <string name="apply">"Εφαρμογή"</string>
    <string name="syncUpdate">"Λήψη νέας έκδοσης της εφαρμογής."</string>
    <string name="syncBalances">Συγχρονισμός υπολοίπων.</string>
    <string name="syncTradePolicies">Συγχρονισμός εμπορικών πολιτικών.</string>
    <string name="syncCompleted">"O συγχρονισμός ολοκληρώθηκε, μπορείτε να κλείσετε το παράθυρο."</string>
    <string name="syncCustomerItem">Συγχρονισμός πωλητών, πελατών, προϊόντων.</string>
    <string name="syncInvoice">Συγχρονισμός παραστατικών(παραγγελίες, απογραφές).</string>
    <string name="syncFInvoice">Συγχρονισμός εισπράξεων.</string>
    <string name="syncImage">Συγχρονισμός εικόνων.</string>
    <string name="onlineIpAddress">Online IP</string>
    <string name="localIpAddress">Τοπική IP</string>
    <string name="deleteInvoices">"Διαγραφή όλων των παραστατικών."</string>
    <string name="noDirectoryCreated">"Δεν δημιουργήθηκε ο φάκελος: %1$s"</string>
    <string name="onlineReport">Online Εκτύπωση</string>
    <string name="invoiceFailed">"Το παραστατικό δεν περάστηκε."</string>
    <string name="customerFailed">"Ο πελάτης δεν περάστηκε."</string>
    <string name="deleteBarcode">"Διαγραφή Barcode"</string>
    <string name="orderdetail">Λεπτομέρειες Παραγγελίας</string>
    <string name="scanSummary">Scan Συγκεντρωτικού Δελτίου</string>
    <string name="showSummary">Προβολή Συγκ. Δελτίου</string>
    <string name="summaryReport">Συγκεντρωτικό Δελτίο</string>
    <string name="quickPlan">Γρήγορο Σχέδιο</string>
    <string name="new_quickPlan">Νέο Γρήγορο Σχέδιο</string>
    <string name="loadQuickPlans">Προβολή Γρήγορων Σχεδίων</string>
</resources>