<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="organotiki.mobile.NorthnetStatistics.Collections">

    <item
        android:id="@+id/menuItem_add_check"
        android:icon="@drawable/ic_add_box_white_48dp"
        android:title="@string/addCheck"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item
        android:id="@+id/print_collections"
        android:icon="@drawable/baseline_print_white_48dp"
        android:title="@string/print"
        android:orderInCategory="200"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItem_submit"
        android:icon="@drawable/ic_check_white_48dp"
        android:title="@string/submit"
        android:orderInCategory="300"
        app:showAsAction="ifRoom" />

</menu>