<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="organotiki.mobile.mobilestore.InventoryCheck">

    <item
        android:id="@+id/menuItem_delete_barcode"
        android:icon="@drawable/ic_minus_box_white_48dp"
        android:title="@string/deleteBarcode"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/menuItem_add_barcode"
        android:icon="@drawable/ic_add_box_white_48dp"
        android:title="@string/setBarcode"
        android:orderInCategory="4"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItem_next"
        android:icon="@drawable/ic_chevron_right_white_48dp"
        android:title="@string/next"
        android:orderInCategory="5"
        app:showAsAction="ifRoom" />
</menu>