<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="organotiki.mobile.NorthnetStatistics.LogInScreen">

    <!--<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_above="@+id/userName"
        android:adjustViewBounds="true"
        android:layout_alignStart="@id/userName"
        android:layout_alignEnd="@id/userName"/>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userlogin"
        android:layout_above="@+id/userName"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorAccent"
        android:layout_alignStart="@+id/userName"
        />

    <EditText
        android:id="@+id/userName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/password"
        android:singleLine="true"
        android:hint="@string/username"
        />
    <!--android:text="Little Athan"-->
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:inputType="textPassword"
        android:singleLine="true"
        android:hint="@string/password"
        />
    <!--android:text="G@mat0sa"-->

    <Button
        android:id="@+id/exit"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/logIn"
        android:layout_alignTop="@+id/exit"
        android:layout_marginStart="20dp"
        android:layout_alignEnd="@+id/password"
        />

    <Button
        android:id="@+id/anydesk"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@mipmap/anydesk_logo"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>
